@@ -1,111 +1,183 @@
-# Hospital San Rafael - Sistema de Gestión
+# 🏥 Hospital San Rafael - Sistema de Gestión Académica
 
-Sistema de gestión para estudiantes y doctores del Hospital San Rafael desarrollado con JavaFX.
+Sistema integral de gestión para estudiantes y doctores del Hospital San Rafael, desarrollado con **JavaFX** y conectado a base de datos **PostgreSQL**.
 
-## Requisitos
+![Java](https://img.shields.io/badge/Java-17-blue?style=flat-square&logo=openjdk)
+![JavaFX](https://img.shields.io/badge/JavaFX-17-green?style=flat-square)
+![PostgreSQL](https://img.shields.io/badge/PostgreSQL-13+-blue?style=flat-square&logo=postgresql)
+![Maven](https://img.shields.io/badge/Maven-3.6+-red?style=flat-square&logo=apache-maven)
 
-- Java 17 o superior
-- Maven 3.6 o superior
+## 📋 Descripción
 
-## Estructura del Proyecto
+Este sistema permite:
+- ✅ **Gestión de Estudiantes**: Registro, edición, eliminación y consulta
+- ✅ **Gestión de Doctores**: Control de personal médico y especialidades
+- ✅ **Catálogo de Materias**: Administración del plan de estudios
+- ✅ **Consulta de Horarios**: Visualización de horarios por estudiante
+- ✅ **Control de Registros**: Bitácora de ingresos al hospital
+- ✅ **Conexión a PostgreSQL**: Persistencia real de datos en base de datos
+
+## 🚀 Requisitos Previos
+
+| Recurso | Versión Mínima | Descarga |
+|---------|---------------|----------|
+| Java JDK | 17+ | [Descargar](https://adoptium.net/) |
+| Maven | 3.6+ | [Descargar](https://maven.apache.org/) |
+| PostgreSQL | 13+ | [Descargar](https://www.postgresql.org/) |
+| pgAdmin 4 | Cualquier versión | Incluido con PostgreSQL |
+
+## 📦 Instalación
+
+### 1. Clonar o descargar el proyecto
+```bash
+cd "C:\Users\danie\Documents\Proyectos\U\Proyecto Integrador 3er\HospitalSanRafael"
+```
+
+### 2. Configurar la base de datos
+
+#### a) Crear la base de datos en PostgreSQL
+Abre pgAdmin 4 y ejecuta:
+```sql
+CREATE DATABASE hospital_san_rafael WITH OWNER = postgres ENCODING = 'UTF8';
+```
+
+#### b) Ejecutar el script de creación
+1. Abre el archivo `database/script.sql`
+2. Copia todo el contenido
+3. En pgAdmin, ve a `hospital_san_rafael` → Query Tool
+4. Pega y ejecuta (F5)
+
+#### c) Configurar la conexión
+Edita `src/main/resources/database.properties`:
+```properties
+db.url=jdbc:postgresql://localhost:5433/hospital_san_rafael
+db.username=postgres
+db.password=admin  # Tu contraseña real
+db.driver=org.postgresql.Driver
+```
+
+### 3. Compilar el proyecto
+```bash
+mvn clean compile
+```
+
+## ▶️ Ejecución
+
+```bash
+mvn clean compile javafx:run
+```
+
+O usa el script incluido:
+- **Windows**: `run.bat`
+- **Linux/Mac**: `./run.sh`
+
+## 📖 Uso Básico
+
+### Registrar un Estudiante
+1. Ve a **Gestión de Estudiantes**
+2. Click en **Nuevo**
+3. Llena el formulario:
+   - **ID**: Código único (ej: `E001`)
+   - **Nombre/Apellido**: Datos personales
+   - **Fecha Nacimiento**: Formato `AAAA-MM-DD` (ej: `2000-01-15`)
+   - **Carrera**: Programa académico
+   - **Semestre**: Número (1-10)
+   - **Turno**: `Mañana`, `Tarde` o `Noche` (exactamente así)
+4. Click en **Guardar**
+
+### Consultar en PostgreSQL
+Para verificar que los datos se guardaron:
+```sql
+SELECT p.id, p.nombre, p.apellido, e.carrera, e.semestre
+FROM persona p
+JOIN estudiante e ON p.id = e.id_persona
+WHERE p.tipo_persona = 'ESTUDIANTE'
+ORDER BY p.fecha_creacion DESC;
+```
+
+## 🗂️ Estructura del Proyecto
 
 ```
 HospitalSanRafael/
-├── src/
-│   ├── main/
-│   │   ├── java/com/hospital/sanrafael/
-│   │   │   ├── Main.java                 # Clase principal
-│   │   │   ├── controller/               # Controladores JavaFX
-│   │   │   ├── model/                    # Modelos de datos
-│   │   │   ├── service/                  # Capa de servicio
-│   │   │   ├── dao/                      # Capa de acceso a datos
-│   │   │   └── view/                     # Fábrica de vistas
-│   │   └── resources/css/
-│   │       └── styles.css                # Estilos de la aplicación
-├── pom.xml                               # Configuración de Maven
-└── README.md                             # Este archivo
+├── database/
+│   ├── script.sql                 # Script de creación de BD
+│   └── database.properties        # Configuración de conexión
+├── src/main/java/com/hospital/sanrafael/
+│   ├── Main.java                  # Punto de entrada
+│   ├── controller/                # Controladores JavaFX
+│   ├── model/                     # Modelos de datos
+│   ├── service/                   # Lógica de negocio
+│   ├── dao/                       # Acceso a datos (PostgreSQL)
+│   └── view/                      # Fábricas de vistas
+├── src/main/resources/css/
+│   └── styles.css                 # Estilos de la interfaz
+├── pom.xml                        # Dependencias Maven
+└── README.md                      # Este archivo
 ```
 
-## Características
+## 🛠️ Tecnologías
 
-### Gestión de Estudiantes
-- Registro completo de información personal y académica
-- Control de carrera, semestre y turno
-- Visualización de materias inscritas
-- Consulta de horarios semanales
+| Categoría | Tecnología |
+|----------|-----------|
+| **Lenguaje** | Java 17 |
+| **UI Framework** | JavaFX 17 |
+| **Base de Datos** | PostgreSQL 13+ |
+| **Gestor BD** | pgAdmin 4 |
+| **Build Tool** | Maven 3.6+ |
+| **JDBC Driver** | PostgreSQL JDBC 42.6.0 |
 
-### Gestión de Doctores
-- Registro de información profesional
-- Control de especialidad y número de colegiado
-- Asignación de área en el hospital
-- Gestión de estudiantes supervisados
+## 📊 Modelo de Datos
 
-### Materias
-- Catálogo de materias con créditos
-- Información de profesores y aulas
-- Horarios por materia
-- Requisitos por semestre
+### Entidades Principales
+- **Persona**: Clase base (Estudiante, Doctor)
+- **Estudiante**: Información académica
+- **Doctor**: Especialidad y área asignada
+- **Materia**: Catálogo académico
+- **Horario**: Distribución temporal
+- **RegistroHospitalario**: Control de accesos
 
-### Horarios
-- Consulta de horarios por estudiante
-- Visualización de materias inscritas
-- Horario semanal detallado
+## 🔧 Solución de Problemas
 
-### Registros
-- Control de ingreso al hospital
-- Resumen diario de asistencia
-- Estadísticas por semestre y especialidad
+### Error: "FATAL: no existe la base de datos"
+**Solución**: Verifica que hayas creado `hospital_san_rafael` en PostgreSQL.
 
-## Instalación
+### Error: "la columna fecha_nacimiento es de tipo date"
+**Solución**: El sistema ya convierte automáticamente. Asegúrate de usar formato `AAAA-MM-DD` o `DD/MM/AAAA`.
 
-1. Clonar o descargar el proyecto
-2. Navegar a la carpeta del proyecto
-3. Ejecutar `mvn clean install` para compilar
-4. Ejecutar `mvn javafx:run` para iniciar la aplicación
+### Error: "viola la restricción check estudiante_turno_check"
+**Solución**: El campo Turno debe ser exactamente: `Mañana`, `Tarde` o `Noche`.
 
-## Ejecución
+### Error: "FATAL: la autenticación password falló"
+**Solución**: Actualiza `db.password` en `database.properties` con tu contraseña real de PostgreSQL.
 
-### Con Maven
-```bash
-mvn javafx:run
-```
+### La aplicación no muestra datos en pgAdmin
+**Solución**: 
+1. Asegúrate de estar conectado al puerto correcto (5432 o 5433)
+2. Refresca la vista de la tabla (F5)
+3. Ejecuta: `SELECT * FROM persona;`
 
-### Con Java
-```bash
-java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar target/hospital-san-rafael-1.0.0.jar
-```
+## 📝 Características Destacadas
 
-## Uso
+- ✅ **Conexión Automática**: Detección y reconexión automática a PostgreSQL
+- ✅ **Manejo de Errores**: Mensajes descriptivos y logs en consola
+- ✅ **Transacciones**: Guardado atómico (todo o nada)
+- ✅ **Conversión de Fechas**: Acepta múltiples formatos
+- ✅ **Interfaz Moderna**: Diseño con gradientes y efectos visuales
+- ✅ **Datos de Ejemplo**: Incluye población inicial de prueba
 
-1. **Menú Principal**: Seleccione la sección que desea gestionar
-2. **Estudiantes**: Registre o consulte información de estudiantes
-3. **Doctores**: Administre el personal médico
-4. **Materias**: Gestione el pensum académico
-5. **Horarios**: Consulte horarios por estudiante
-6. **Registros**: Controle el ingreso al hospital
+## 📞 Soporte
 
-## Tecnologías
+Para reportar errores o sugerencias, revisa la documentación en:
+- `database/README.md` - Guía de base de datos
+- `database/INSTALACION_POSTGRESQL.md` - Instalación de PostgreSQL
+- `GUIA_USO.md` - Manual de usuario completo
 
-- **Java 17**: Lenguaje de programación
-- **JavaFX 17**: Interfaz gráfica
-- **Maven**: Gestión de dependencias
-- **GSON**: Serialización JSON (opcional)
+## 👨‍💻 Autor
 
-## Modelo de Datos
+Desarrollado para el **Hospital San Rafael**  
+Versión: 1.0.0  
+Última actualización: 2026
 
-### Persona (Clase Base)
-- Estudiante
-- Doctor
+---
 
-### Entidades
-- Materia
-- Horario
-- RegistroHospitalario
-
-## Autor
-
-Desarrollado para el Hospital San Rafael
-
-## Licencia
-
-Propiedad del Hospital San Rafael
+**Hospital San Rafael** - *Comprometidos con la excelencia académica y médica*
